--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ xing_username:    Shrijal_Pradhan
 # Build settings
 # from 2016, 'pygments' is unsupported on GitHub Pages. Use 'rouge' for highlighting instead.
 future: true
-permalink: none
+permalink: /:categories/:title
 paginate: 10
 exclude: ["less","node_modules","Gruntfile.js","package.json","README.md"]
 anchorjs: true                          # if you want to customize anchor. check out line:181 of `post.html`
